--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ section {
 
 .hero-section {
     height: 100vh;
-    background-image: url('images/bg-mountain.jpg');
+    background-image: url('../assets/images/hero.jpg');
     background-attachment: fixed;
     background-position: center 0px;
     background-repeat: no-repeat;
